# django-uptact-upload-example

./: README.md  manage.py  pyproject.toml
contacts/: models.py
