[tool.poetry]
name = "uptact"
version = "0.1.0"
description = ""
authors = ['Clinton Dreisbach <clinton@momentumlearn.com>']

[tool.poetry.dependencies]
python = "^3.7"
django = "^3.0.5"
django-extensions = "^2.2.9"
django-debug-toolbar = "^2.2"
werkzeug = "^1.0.1"
django-environ = "^0.4.5"
django-localflavor = "^3.0.1"

[tool.poetry.dev-dependencies]
prospector = "^1.2.0"
pytest = "^5.4.1"
mypy = "^0.770"
yapf = "^0.29.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
